<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/grey_round_corner"
    android:orientation="horizontal"
    android:paddingVertical="16dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:background="@color/shimmer" />

        <TextView
            android:id="@+id/cloudCover1"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:background="@color/shimmer"
            android:text="@string/unknown"
            android:textColor="@color/shimmer" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/shimmer"
            android:text="@string/wind"
            android:textColor="@color/shimmer" />

    </LinearLayout>
    <View
        android:layout_width="2dp"
        android:layout_height="80dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:background="@color/shimmer" />

        <TextView
            android:id="@+id/humidity1"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            android:layout_marginVertical="10dp"
            android:layout_gravity="center"
            android:textColor="@color/shimmer"
            android:background="@color/shimmer" />


        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textColor="@color/shimmer"
            android:layout_gravity="center"
            android:background="@color/shimmer" />
    </LinearLayout>
    <View
        android:layout_width="2dp"
        android:layout_height="80dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:background="@color/shimmer"/>

        <TextView
            android:id="@+id/wind1"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            android:textColor="@color/shimmer"
            android:layout_marginVertical="10dp"
            android:layout_gravity="center"
            android:background="@color/shimmer"/>

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/wind"
            android:textColor="@color/shimmer"
            android:background="@color/shimmer"/>
    </LinearLayout>

</LinearLayout>